# Data-Hygiene-Toolkit

./: .gitignore  63090a6f-b69a-457f-ac79-279f7c5c8fae.json  Dockerfile  Dockerfile.fastapi  Dockerfile.frontend  Dockerfile.frontend.dev  Dockerfile.migrations  Enhancements.md  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PHASE3_COMPLETE.md  PROJECT_COMPLETE.md  PROJECT_STATUS.md  README.md  RULE_VERSIONING_GUIDE.md  RULE_VERSIONING_QUICKREF.md  UI_plan.md  cloudflared-config.yml  create_test_rules.py  create_test_user.py  docker-compose.prod-sim.yml  docker-compose.yml  fly.local.toml  fly.toml  package-lock.json  package.json  pyproject.toml  repomix-output.xml  rule_edit_solution.md  rules-system-docs.md  supabase_migration.sql  test.csv  test_execution_fix.py  test_orders copy.csv  test_orders.csv
.claude/agents/: data-hygiene-toolkit-developer.md
.cleanup/: Dockerfile  Dockerfile.frontend  Dockerfile.optimized  PROD_SIMULATION.md  docker-compose.prod-sim.yml  docker-compose.prod-sim.yml.backup
.github/workflows/: backend-deploy.yml  terraform-apply.yml  terraform-plan.yml  tests.yml
.serena/: project.yml
api/: .coverage  coverage.xml  create_test_rules.py  test-results.xml
api/app/: auth.py  constants.py  database.py  database_optimized.py  main.py  models.py  schemas.py
api/migrations/: alembic.ini
docker/backend/: Dockerfile
frontend/: next.config.ts  package-lock.json  package.json  vercel.json
scripts/: init-db.sh  setup.sh  verify-cleanup.sh
supabase/: 00-pre-init.sql  00000000000004-custom-passwords.sql  0001_change_timestamp_to_timestamptz.sql  config.toml  kong.yml
terraform/: PROGRESS.md  README.md  backend.tf  main.tf  outputs.tf  providers.tf  variables.tf
(+158 files in other folders)
