[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "celery>=5.5.3",
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "h11>=0.16.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "passlib>=1.7.4",
    "psutil>=5.9.0",
    "psycopg[binary]>=3.2.9",
    "pyarrow>=18.1.0",
    "pydantic[email]>=2.11.7",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.41",
    "typing-extensions>=4.14.1",
    "uuid>=1.30",
    "uvicorn>=0.35.0",
    "uvloop>=0.21.0",
    "pytest>=7.4.4",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

